--- a/index.html
+++ b/index.html
@@ -167,9 +167,7 @@
                       aria-label="instagram site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -195,9 +193,7 @@
                       aria-label="facebook site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -210,9 +206,7 @@
                       aria-label="linkedin site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -240,9 +234,7 @@
                       aria-label="instagram site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -268,9 +260,7 @@
                       aria-label="facebook site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -284,9 +274,7 @@
                       aria-label="linkedin site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -314,9 +302,7 @@
                       aria-label="instagram site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -342,9 +328,7 @@
                       aria-label="facebook site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -357,9 +341,7 @@
                       aria-label="linkedin site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -387,9 +369,7 @@
                       aria-label="instagram site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -415,9 +395,7 @@
                       aria-label="facebook site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -430,9 +408,7 @@
                       aria-label="linkedin site"
                     >
                       <svg class="social-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -641,7 +617,115 @@
             </li>
           </ul>
         </div>
+        <div class="footer-wrapper">
+          <p class="wrapper-caption">Subscribe</p>
+          <form class="subscribe-form" name="subscribe">
+            <label class="subscribe-form-field">
+              <input
+                class="subscribe-form-input"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+
+            <button class="subscribe-form-btn" type="submit">
+              Subscribe
+              <svg class="subscribe-form-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-vector"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    Modal window
+
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-btn" type="button" aria-label="Modal close button">
+          <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form form" name="modal">
+          <div class="form-wrapper">
+            <label class="form-label" for="user_name">Name</label>
+            <div class="form-field">
+              <input
+                class="form-input"
+                type="text"
+                id="user_name"
+                name="user_name"
+              />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-wrapper">
+            <label class="form-label" for="user_name">Phone</label>
+            <div class="form-field">
+              <input
+                class="form-input"
+                type="text"
+                id="user_name"
+                name="user_name"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-wrapper">
+            <label class="form-label" for="user_name">Email</label>
+            <div class="form-field">
+              <input
+                class="form-input"
+                type="text"
+                id="user_name"
+                name="user_name"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-wrapper">
+            <label class="form-label" for="user_message">Comment</label>
+
+            <textarea
+              class="form-message"
+              name="user_message"
+              id="user_message"
+              rows="4"
+              placeholder="Text input"
+            ></textarea>
+
+            <label class="form-agreement">
+              <input
+                class="checkbox visually-hidden"
+                type="checkbox"
+                name="usr_agreement"
+                value="false"
+                checked
+              />
+              <span class="form-agreement-checkbox">
+                <svg class="form-agreement-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-property-click"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="form-agreement-link" href="">Privacy Policy</a>
+            </label>
+
+            <button class="form-btn" type="submit" disabled>Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
