--- a/index.html
+++ b/index.html
@@ -623,6 +623,7 @@
             <label class="subscribe-form-field">
               <input
                 class="subscribe-form-input"
+                name="user_name"
                 type="email"
                 placeholder="E-mail"
               />
@@ -630,7 +631,7 @@
 
             <button class="subscribe-form-btn" type="submit">
               Subscribe
-              <svg class="subscribe-form-icon" width="10" height="8">
+              <svg class="subscribe-form-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-vector"></use>
               </svg>
             </button>
@@ -653,27 +654,27 @@
         </p>
         <form class="modal-form form" name="modal">
           <div class="form-wrapper">
-            <label class="form-label" for="user_name">Name</label>
+            <label for="user-name" class="form-label">Name</label>
             <div class="form-field">
               <input
                 class="form-input"
                 type="text"
-                id="user_name"
-                name="user_name"
+                id="user-name"
+                name="user-name"
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
           <div class="form-wrapper">
-            <label class="form-label" for="user_name">Phone</label>
+            <label for="user-tel" class="form-label">Phone</label>
             <div class="form-field">
               <input
                 class="form-input"
                 type="text"
-                id="user_name"
-                name="user_name"
+                id="user-tel"
+                name="user-tel"
               />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
@@ -681,13 +682,13 @@
             </div>
           </div>
           <div class="form-wrapper">
-            <label class="form-label" for="user_name">Email</label>
+            <label for="user-email" class="form-label">Email</label>
             <div class="form-field">
               <input
                 class="form-input"
                 type="text"
-                id="user_name"
-                name="user_name"
+                id="user-email"
+                name="user-email"
               />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
@@ -695,33 +696,33 @@
             </div>
           </div>
           <div class="form-wrapper">
-            <label class="form-label" for="user_message">Comment</label>
+            <label  for="user-comment" class="form-label">Comment</label>
 
             <textarea
-              class="form-message"
-              name="user_message"
-              id="user_message"
+              class="form-comment"
+              name="user-comment"
+              id="user-comment"
               rows="4"
               placeholder="Text input"
             ></textarea>
-
-            <label class="form-agreement">
-              <input
-                class="checkbox visually-hidden"
-                type="checkbox"
-                name="usr_agreement"
-                value="false"
-                checked
-              />
-              <span class="form-agreement-checkbox">
-                <svg class="form-agreement-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-property-click"></use>
-                </svg>
-              </span>
-              I accept the terms and conditions of the
+           </div>
+            <div class="checkbox-form">
+              <input class="checkbox visually-hidden"
+                     type="checkbox"
+                     id="user-privacy" 
+                     name="user-privacy"
+                     value="true" />
+              <label for="user-privacy" class="form-privasy">
+                <span class="form-agreement-checkbox">
+                  <svg class="form-agreement-icon" width="10" height="8">
+                    <use href="./images/icons.svg#icon-vector"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the
               <a class="form-agreement-link" href="">Privacy Policy</a>
-            </label>
-
+              
+              </label>
+          
             <button class="form-btn" type="submit" disabled>Send</button>
           </div>
         </form>
