--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
               name="user-privacy"
               value="true"
             />
-            <label for="user-privacy" class="form-privasy">
+            <label for="user-privacy" class="form-privacy">
               <span class="form-agreement-checkbox">
                 <svg class="form-agreement-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
