--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-wrapper">
+          <div class="form-wrapper-comment">
             <label for="user-comment" class="form-label">Comment</label>
 
             <textarea
