--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
             <button class="subscribe-form-btn" type="submit">
               Subscribe
               <svg class="subscribe-form-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-vector"></use>
+                <use href="./images/icons.svg#icon-frame"></use>
               </svg>
             </button>
           </form>
